# Farming-Sim

./: Cargo.toml
assets/maps/: map.ldtk
src/: components.rs  dbg.txt  main.rs  player.rs  soil.rs
src/structs/: comps.rs  events.rs  mod.rs  resources.rs
